deploy/kdemo-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: kdemo
  labels:
    name: kdemo
