deploy/metrics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdemo-elastic-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdemo-elastic
  template:
    metadata:
      labels:
        app: kdemo-elastic
    spec:
      containers:
        - name: kdemo-elastic
          image: docker.elastic.co/kibana/kibana:7.14.2
          imagePullPolicy: Always
          ports:
            - containerPort: 9200
          volumeMounts:
            - mountPath: /usr/share/elasticsearch/data
              name: elastic-data
      volumes:
        - name: kdemo-elastic-data
          persistentVolumeClaim:
            claimName: kdemo-elastic-pv-claim
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdemo-kibana-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdemo-kibana
  template:
    metadata:
      labels:
        app: kdemo-kibana
    spec:
      containers:
        - name: kdemo-kibana
          image: docker.elastic.co/kibana/kibana:7.14.2
          imagePullPolicy: Always
          ports:
            - containerPort: 5601
