deploy/postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdemo-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdemo-postgres
  template:
    metadata:
      labels:
        app: kdemo-postgres
    spec:
      containers:
        - name: kdemo-postgres
          image: registry.codegarage.ru/codegarage/kubernetesdeploymentdemo/kdemo-postgres:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgredb
      imagePullSecrets:
        - name: registry-credentials
      volumes:
        - name: postgredb
          persistentVolumeClaim:
            claimName: kdemo-postgres-pv-claim
