deploy/rabbit-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdemo-rabbitmq-deployment
  namespace: kdemo
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kdemo-rabbitmq
  template:
    metadata:
      labels:
        app: kdemo-rabbitmq
    spec:
      containers:
        - name: kdemo-rabbitmq
          image: rabbitmq:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5672
          readinessProbe:
            exec:
              command:
                - rabbitmq-diagnostics
                - -q
                - ping
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 5
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
              exec:
                command:
                  - rabbitmq-diagnostics
                  - -q
                  - ping
              initialDelaySeconds: 30
              periodSeconds: 20
