deploy/services-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kdemo-orders-service-deployment
  namespace: kdemo
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: kdemo-orders-service
  template:
    metadata:
      labels:
        app: kdemo-orders-service
    spec:
      containers:
        - name: kdemo-orders-service
          image: registry.ezlab.ru/ezlab/kubernetesdeploymentdemo/kdemo-orders-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: registry-credentials
