deploy/api-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdemo-customer-api
  namespace: kdemo
  labels:
    app: kdemo-customer-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: kdemo-customer-api
---
apiVersion: v1
kind: Service
metadata:
  name: kdemo-catalog-api
  namespace: kdemo
  labels:
    app: kdemo-catalog-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: kdemo-catalog-api
---
apiVersion: v1
kind: Service
metadata:
  name: kdemo-orders-api
  namespace: kdemo
  labels:
    app: kdemo-orders-api
spec:
  type: ClusterIP
  ports:
    - port: 8080
  selector:
    app: kdemo-orders-api
