deploy/postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdemo-postgres
  labels:
    app: kdemo-postgres
spec:
  type: NodePort
  ports:
    - port: 5432
  selector:
    app: kdemo-postgres
