deploy/rabbit-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdemo-rabbitmq
  labels:
    app: kdemo-rabbitmq
spec:
  type: ClusterIP
  ports:
    - port: 5672
  selector:
    app: kdemo-rabbitmq
