deploy/web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kdemo-web
  namespace: kdemo
  labels:
    app: kdemo-web
spec:
  type: ClusterIP
  ports:
    - port: 80
  selector:
    app: kdemo-web
