deploy/metrics-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kdemo
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: kdemo.staging.codegarage.ru
      http:
        paths:
          - path: /(.*)
            pathType: Prefix
            backend:
              service:
                name: kdemo-nginx
                port:
                  number: 8080
