deploy/web-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kdemo-nginx-ingress
  namespace: kdemo
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`kdemo.ezlab.ru`)
      kind: Rule
      services:
        - name: kdemo-nginx
          port: 80
    - match: Host(`kdemo.staging.box.ezlab.ru`)
      kind: Rule
      services:
        - name: kdemo-nginx
          port: 80
